--- a/package.json
+++ b/package.json
@@ -40,9 +40,9 @@
     "@radix-ui/react-tooltip": "1.1.6",
     "@react-three/drei": "^10.0.8",
     "@react-three/fiber": "^9.1.2",
-    "@supabase/auth-helpers-nextjs": "^0.10.0",
+    "@supabase/ssr": "^0.5.1",
     "@supabase/supabase-js": "^2.49.8",
-    "@types/three": "^0.176.0",
+    "@types/three": "^0.5.1",
     "autoprefixer": "^10.4.20",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
